--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: "wallet-dashboard.tar.gz,docker-compose.yml"
+        source: "wallet-dashboard.tar.gz,docker-compose.prod.yml"
         target: "/tmp/wallet-dashboard-deploy"
     
     - name: Deploy and restart container
@@ -52,7 +52,7 @@ jobs:
           cd /tmp/wallet-dashboard-deploy
           docker load < wallet-dashboard.tar.gz
           cd /root/deployments/wallet-dashboard
-          cp /tmp/wallet-dashboard-deploy/docker-compose.yml .
+          cp /tmp/wallet-dashboard-deploy/docker-compose.prod.yml ./docker-compose.yml
           docker compose down || true
           docker compose up -d
           rm -rf /tmp/wallet-dashboard-deploy
