--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
-      - ALCHEMY_KEY=${ALCHEMY_KEY:-***ALCHEMY_KEY_REMOVED***}
+      - ALCHEMY_KEY=${ALCHEMY_KEY}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
