--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "dev": "nodemon server.js",
     "test": "echo \"No tests yet\" && exit 0"
   },
-  "keywords": ["web3", "wallet", "dashboard", "base", "solana"],
+  "keywords": [
+    "web3",
+    "wallet",
+    "dashboard",
+    "base",
+    "solana"
+  ],
   "author": "Arbi <arbi@betterfuturelabs.xyz>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "ethers": "^6.9.0",
     "@solana/web3.js": "^1.87.0",
-    "cors": "^2.8.5"
+    "axios": "^1.13.4",
+    "cors": "^2.8.5",
+    "ethers": "^6.9.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
